<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="66dp"
        android:layout_marginBottom="58dp"
        android:background="@color/design_default_color_error"
        android:text="@string/choix_du_sandwich"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radGroup"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="80dp">

        <RadioButton
            android:id="@+id/radVégé"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:text="@string/v_g_tarien"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radRouge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fondRadio"
            android:text="@string/viande_rouge"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radBlanc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorPressedHighlight"
            android:text="@string/viande_blanche"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="352dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="55dp"
        android:background="@color/design_default_color_secondary"
        android:text="@string/option_pour_votre_sandwich"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/chkMayo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="39dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/mayonnaise"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/chkKetchup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="63dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/ketchup"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCommander"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="163dp"
        android:text="@string/commander"
        android:textSize="24sp" />
</LinearLayout>